# Build 5.8.2 Release ?/??/2014
   1. CM1Server has "FILE" command now for directory browsing/manipulation
   2. GenAbility additions: can now alter default duration of effect skills, and whether the damage/healing/extra casts happen periodically.
   3. Added an example of a "Channeling" mechanic to spells, though it's pointless with the default combat system. See GenAbility and Spell_ChannelingMissiles/
   4. Coffeemud now has a Char/Account approval system. Use expiration system w/trialdays of 0. Archons are notified of expired/unapproved users.
   *. Clan-Player level PVP ranking in Clans
   *. Clan forums and web sites
   *. Weapon/Armor/Item level system - detach char level from item reqs
   *. Char and Account PVP ranking
   *. Push regen rates to INI file
   *. New combat system: turn based
   *. Name generator, finally
   *. make the tech install skill!!! all put/remove commands should check msg.value() for pct chance/competence
      competence divides by manufacturer and class of item. Minimum of 1/5 pts on max other items same manufacturer/type
      using expertises is a great idea.  Every time engineering levels up, gain a rank in appropriate expertise?
   *. make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
      this encourages equality in tech level, which will bleed out into the comparative components (weapons, shields)
   *. retest private libs, private dbtables, private classes, private area objects, private players
   *. some way to reposition planets? esp relative to nearby ones
   *. create solar systems, esp stars.  planets should be thin areas, solar systems are triggered to load when players fly near enough.
   *. MoneyChanger/Banker behavior to discount currency by its distant origin (farther planet is from origin of currency, less its worth).
   *. personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!