@@ -97,6 +97,7 @@ CREATE TABLE CMCHCL (
 CMUSERID varchar (50) ,
 CMCLAN varchar (100) ,
 CMCLRO integer NULL,
+CMCLSTS varchar (100) NULL,
 PRIMARY KEY(CMUSERID, CMCLAN)
 );
 
