@@ -90,6 +90,7 @@ CREATE TABLE CMCHCL (
 CMUSERID varchar (50) NOT NULL,
 CMCLAN varchar (100) NOT NULL,
 CMCLRO integer ,
+CMCLSTS varchar (100),
 PRIMARY KEY(CMUSERID, CMCLAN)
 );
 CREATE TABLE CMCHIT (
