@@ -97,6 +97,7 @@ CREATE TABLE CMCHCL (
 CMUSERID nvarchar (50),
 CMCLAN nvarchar (100),
 CMCLRO integer NULL,
+CMCLSTS nvarchar (100) NULL,
 PRIMARY KEY(CMUSERID, CMCLAN)
 );
 
