@@ -125,7 +125,8 @@ ALTER TABLE CMCHFO
 CREATE TABLE CMCHCL (
 	CMUSERID char (50) NULL ,
 	CMCLAN char (100) NULL ,
-	CMCLRO int NULL 
+	CMCLRO int NULL,
+	CMCLSTS char (100) NULL
 );
 
 ALTER TABLE CMCHCL
