@@ -108,7 +108,8 @@ ALTER TABLE CMCHFO
 CREATE TABLE CMCHCL (
 	CMUSERID varchar (50) NOT NULL ,
 	CMCLAN varchar (100) NULL ,
-	CMCLRO int NULL 
+	CMCLRO int NULL,
+	CMCLSTS varchar (100) NULL
 );
 
 ALTER TABLE CMCHCL
