@@ -95,7 +95,8 @@ CREATE TABLE CMCHFO (
 CREATE TABLE CMCHCL (
 	CMUSERID varchar (50) NOT NULL,
 	CMCLAN varchar (100) NOT NULL,
-	CMCLRO int ,
+	CMCLRO int,
+	CMCLSTS varchar (100) ,
 	PRIMARY KEY(CMUSERID, CMCLAN)
 );
 
