@@ -61,6 +61,7 @@ CMCHCL
 CMUSERID string KEY
 CMCLAN string KEY
 CMCLRO integer NULL
+CMCLSTS string NULL
 
 CMCHIT
 CMUSERID string KEY
