@@ -1,9 +1,10 @@
 # Build 5.8.2 Release ?/??/2014
+   0. Database Schema Updated! Run DBUpgrade, OR manually alter table CMCHCL (see appropriate schema file)
    1. CM1Server has "FILE" command now for directory browsing/manipulation
    2. GenAbility additions: can now alter default duration of effect skills, and whether the damage/healing/extra casts happen periodically.
    3. Added an example of a "Channeling" mechanic to spells, though it's pointless with the default combat system. See GenAbility and Spell_ChannelingMissiles/
    4. Coffeemud now has a Char/Account approval system. Use expiration system w/trialdays of 0. Archons are notified of expired/unapproved users.
-   *. Clan-Player level PVP ranking in Clans
+   *. Clan-Player level PVP ranking support in clans.  CLANDETAILS has parms to show PVP and total war kills.  WebMacro capable of the same.
    *. Clan forums and web sites
    *. Weapon/Armor/Item level system - detach char level from item reqs
    *. Char and Account PVP ranking
